--- a/dbms/style.css
+++ b/dbms/style.css
@@ -10,11 +10,12 @@
     height: 100vh;
 }
 .logo{
-    width:300px;
-    position: left;
-    top: 1%;
-    left:0px;
-    
+    position: relative;
+    top: 13px;
+    left:13px;
+    height: 50px;   
+    width: 60px;
+    cursor: pointer; 
 }
 .banner-text{
     text-align: center;
@@ -38,7 +39,7 @@
     text-decoration: none;
     display: inline-block;
     margin: 0 20px;
-    padding 12px 0;
+    padding :12px 0;
     color: antiquewhite;
     font-family: 'Times New Roman', sans-serif;
     border: .5px solid white;
@@ -320,4 +321,57 @@ h1{
     .test-col{
         flex-basis: 100%;
     }
+}
+.pop-up{
+    width:100%;
+    height: 100vh;
+    background: #3c5077;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.pop{
+    width: 400px;
+    background: white;
+    border-radius: 6px;
+    position: absolute;
+    top: 0%;
+    left: 50%;
+    transform: translate(-50%, -50%) scale(0.1);
+    text-align: center;
+    padding: 0 30px 30px;
+    color: #333;
+    visibility: hidden;
+    transition:  transform 0.4s, top 0.4s;
+}
+.open-popup{
+    visibility: visible;
+    top: 50%;
+    transform: translate(-50%, -50%) scale(1);
+}
+.pop img{
+    width: 100px;
+    margin-top: -50px;
+    border-radius: 50%;
+    box-shadow: 0 2px 5px rgba(0,0,0,.2);
+}
+.pop h2{
+  font-size: 38px;
+  font-weight: 500;
+  margin: 30px 0 10px;
+}
+.pop p{
+    font-size: 26px;
+}
+.pop .btnn{
+    width: 100%;
+    margin-top: 50px;
+    padding: 10px 0;
+    background: #6fd649;
+    color: #fff;
+    outline: none;
+    font-size: 18px;
+    border-radius: 4px;
+    cursor: pointer;
+    box-shadow: 0 5px 5px rgba(0,0,0,.2);
 }
